--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,4 @@
-blinker==1.9.0
-click==8.2.1
-dbfread==2.0.7
-Flask==3.1.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-numpy==2.3.1
-pandas==2.3.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-pytz==2025.2
-q==2.7
-six==1.17.0
-tzdata==2025.2
-Werkzeug==3.1.3
+flask
+python-dotenv
+dbfread
+pandas
